# Chat

./: .gitignore  .gitmodules  build.py  build_second_client.py  comamndSequence.txt  go.mod
Client/: CMakeLists.txt  Makefile  main.cpp
Client/Server/: Dockerfile  Makefile  Server  app.go  build.py  go.mod  install_dependencies.sh  main.go  schema.puml
Client/Server/api/: chat.pb.go  chat_grpc.pb.go
Client/Server/app/: app.go  localServer.go  remoteServer.go
Client/Server/channels/: channels.go
Client/Server/communicator/: baseService.go  chatService.go  communicator.go  interface.go  userService.go
Client/Server/communicators/: grpc_server.go  remoteServer.go
Client/Server/interfaces/: interfaces.go
Client/Server/proto/: chat.proto
Client/Server/services/: chatService.go  userService.go
Client/Server/tools/: protogen.sh
Client/ServerOld/: go.mod  main.go
Client/ServerOld/api/: chat_service.pb.go  chat_service_pb2.py  user_service.pb.go
Client/ServerOld/common/: struct.go
Client/ServerOld/common/logger/: logger.go
Client/ServerOld/common/proto/: chat_service.proto  python_mock.py
Client/ServerOld/common/proto/api/: chat_service_grpc.pb.go  chat_service_pb2.py  user_service_pb2.py
Client/ServerOld/communication/: communicator.go  remoteServer.go
Client/ServerOld/services/: chatService.go  userService.go
Client/UI/: CMakeLists.txt  build.sh  main.cpp  main.qml  qml.qrc
Client/UI/LogInScreen/: LogInScreen.qml  ScreenController.qml  SignIn.qml  SignScreen.qml  SignUp.qml  TextAreaInput.qml
Client/UI/Logger/: Logger.hpp
Client/UI/grpc_client/: BaseService.hpp  ChatService.hpp  Client.hpp  UserService.hpp  client.cc  client.cpp
Client/UI/grpc_client/proto/: chat.proto
Client/UI/json/: CMakeLists.txt  main.cpp
Client/UI/json/Types/Iterator/: Iteartor.h
Client/UI/json/Types/Null/: Null.h
Client/UI/json/Types/Value/: Parser.hpp  Separators.hpp  Value.cpp  Value.h
Client/UI/json/Types/Vector/: Vector.h
Client/UI/qml/: ScreenController.qml  main.qml  qml.qrc
Client/UI/qml/BaseScreen/: BaseScreen.qml  Chat.qml  ChatListModel.qml  ChatModel.qml  SideBar.qml
Client/UI/qml/BaseScreen/CalendarModel/: Date.qml  Time.qml
Client/UI/qml/BaseScreen/ChatListModel/: Chat.qml  ChatListModel.qml
Client/UI/qml/BaseScreen/ChatModel/: ChatModel.qml  Header.qml  UserInput.qml
Client/UI/qml/BaseScreen/Message/: SimpleMessage.qml
Client/UI/qml/BaseScreen/NotificationModel/: NotificationModel.qml
Client/UI/qml/LogInScreen/: RouteArea.qml  SignScreen.qml  TextAreaInput.qml
Client/UI/src/: App.hpp
Client/UI/src/Models/: LogInModel.h  SignInUpModel.hpp
Client/UI/src/Models/BaseScreen/: BaseScreen.hpp  Chat.hpp  ChatListModel.hpp  ChatModel.hpp
Client/UI/src/Models/BaseScreen/NotificationModel/: Notification.hpp  NotificationModel.hpp
Client/communication/: calendar_client.hpp  chat_client.hpp  common.hpp  defaultClient.hpp  todolist_client.hpp  types.hpp  user_client.hpp
Client/communication/json/Bool/: Bool.cpp  Bool.h
Client/communication/json/Integer/: Integer.cpp  Integer.h
Client/communication/json/Map/: Map.cpp  Map.h
Client/communication/json/Null/: Null.cpp  Null.h
Client/communication/json/Number/: Number.cpp  Number.h
Client/communication/json/String/: String.cpp  String.h
Client/communication/json/Value/: Dumper.hpp  Parser.hpp  Value.cpp  Value.h
Client/grpc_client/: ChatService.hpp  Client.hpp
Client/grpc_client/proto_gen/: calendar_service.grpc.pb.cc  calendar_service.pb.cc  calendar_service.pb.h  chat_service.grpc.pb.cc  chat_service.grpc.pb.h  chat_service.pb.h  notification_service.pb.cc  notification_service.pb.h  user_service.pb.h
Client/json/Types/Number/: Number.h
Client/json/Types/String/: String.cpp
Client/qml/: ScreenController.qml  main.qml  qml.qrc
Client/qml/BaseScreen/: BaseScreen.qml
Client/qml/BaseScreen/CalendarModel/: CalendarModel.qml  Date.qml  Meetings.qml  NewMeeting.qml
Client/qml/BaseScreen/ChatListModel/: Chat.qml
Client/qml/BaseScreen/ChatModel/: ChatModel.qml  Header.qml  UserInput.qml
Client/qml/BaseScreen/ChatModel/Message/: DateMessage.qml  SimpleMessage.qml
Client/qml/BaseScreen/NotificationModel/: Notification.qml
Client/qml/BaseScreen/TODOList/: Lists.qml  Task.qml  TodoListModel.qml
Client/qml/LogInScreen/: RouteArea.qml  TextAreaInput.qml
Client/services/: CalendarService.hpp  ChatService.hpp  Client.hpp  TodoListService.hpp  UserService.hpp
Client/src/: App.hpp
Client/src/Models/: SharedData.hpp  SignInUpModel.hpp
Client/src/Models/BaseScreen/: BaseScreen.hpp  Chat.hpp  ChatListModel.hpp  ChatModel.hpp  Header.hpp
Client/src/Models/BaseScreen/CalendarModel/: CalendarModel.hpp  Meeting.hpp
Client/src/Models/BaseScreen/ChatListModel/: Chat.hpp  ChatListModel.hpp
Client/src/Models/BaseScreen/ChatModel/: ChatModel.hpp
Client/src/Models/BaseScreen/ChatModel/Message/: DateMessage.hpp  SimpleMessage.hpp
Client/src/Models/BaseScreen/TodoListModel/: List.hpp  ListsModel.hpp  Task.hpp  TasksModel.hpp  TodoListModel.hpp
Client/src/Models/BaseScreen/utils/: utils.hpp
Client/src/MultiMedia/: multimedia.hpp
Client/src/MultiMedia/Audio/: audio.h
CommunicationProtocol/: chat_service.qface  cppClient.hpp  golangServer.go
CommunicationProtocol/json/: Base.hpp  CMakeLists.txt  main.cpp
CommunicationProtocol/json/Bool/: Bool.h
CommunicationProtocol/json/Integer/: Integer.cpp  Integer.h
CommunicationProtocol/json/Map/: Pair.hpp
CommunicationProtocol/json/Null/: Null.cpp
CommunicationProtocol/json/Number/: Number.cpp
CommunicationProtocol/json/String/: Char.hpp  String.h
CommunicationProtocol/json/Value/: Separators.hpp  Value.h
CommunicationProtocol/json/Vector/: Vector.cpp  Vector.h
RemoteServer/: Dockerfile  build.py  docker-compose.yaml  go.mod  handlers.go  install_dependencies.sh  log.txt  main.go  server.go
Server/: Dockerfile  go.mod  go.sum  main.go  server.go
client/: client  client.go  go.mod  handler.go  main.go
command/: command.go  consts.go  struct.go
commands/: commands.go
common/: const.go  (+1 more)
(+110 files in other folders)
